// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds the active class when active property is true 1`] = `
<li
  class="ListItem active"
>
  <div
    class="ListItem-Child"
  >
    
  </div>
</li>
`;

exports[`renders without crashing 1`] = `
<li
  class="ListItem"
>
  <div
    class="ListItem-Child"
  >
    
  </div>
</li>
`;

exports[`shows remove button when hovered 1`] = `
<ListItem
  item="asdf"
  remove={[Function]}
>
  <li
    className="ListItem"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ListItem-Child"
    />
    <span
      className="ListItem-Remove"
    >
      <RemoveButton
        onClick={[Function]}
      >
        <button
          className="Remove-Button"
          onClick={[Function]}
        >
          <img
            alt="remove"
            className="redx"
            src="/img/red-x.svg"
          />
        </button>
      </RemoveButton>
    </span>
  </li>
</ListItem>
`;

exports[`shows the badge when alert is set 1`] = `
<li
  class="ListItem active"
>
  <div
    class="alert"
  >
    
  </div>
  <div
    class="ListItem-Child"
  >
    
  </div>
</li>
`;
